--- a/frontend/styles/team/team.scss
+++ b/frontend/styles/team/team.scss
@@ -80,13 +80,13 @@
 	}
 	
 	#img_A_H {
-		background: url(../img/team/vader.jpg) no-repeat;
+		background: rgb(0,0,0) url(../img/team/vader.jpg) no-repeat;
 		background-size: cover;
 	    background-position: -40px 0px;
 	}
 	
 	#img_K_U {
-		background: url(../img/team/sidius.jpg) no-repeat;
+		background: rgb(0,0,0) url(../img/team/sidius.jpg) no-repeat;
 		background-size: cover;
 	    background-position: -40px 0px;
 	}
@@ -98,7 +98,7 @@
 	}
 	
 	#img_A_G {
-		background: url(../img/team/luke-skywalker.png) no-repeat;
+		background: rgb(0,0,0) url(../img/team/luke-skywalker.png) no-repeat;
 		background-size: cover;
 	    background-position: -40px 0px;
 	}
