--- a/frontend/styles/testimonials/testimonials.scss
+++ b/frontend/styles/testimonials/testimonials.scss
@@ -83,13 +83,13 @@
 	}
 	
 	#img_A_H {
-		background: url(../img/testimonials/vader.jpg) no-repeat;
+		background: rgb(0,0,0) url(../img/testimonials/vader.jpg) no-repeat;
 		background-size: cover;
 	    background-position: -20px 0px;
 	}
 	
 	#img_K_U {
-		background: url(../img/testimonials/sidius.jpg) no-repeat;
+		background: rgb(0,0,0) url(../img/testimonials/sidius.jpg) no-repeat;
 		background-size: cover;
 	    background-position: -15px 0px;
 	}
@@ -101,7 +101,7 @@
 	}
 	
 	#img_A_G {
-		background: url(../img/testimonials/luke-skywalker.png) no-repeat;
+		background: rgb(0,0,0) url(../img/testimonials/luke-skywalker.png) no-repeat;
 		background-size: cover;
 	    background-position: -20px 0px;
 	}
