--- a/frontend/styles/testimonials/testimonials.scss
+++ b/frontend/styles/testimonials/testimonials.scss
@@ -43,6 +43,8 @@
 			padding-top: 20px;
 			margin-top: 5px;
 			margin-bottom: 5px;
+			position: relative;
+			z-index: 0;
 			
 			.testimonials-cl-img {
 				border: 1px solid black;
