--- a/frontend/styles/team/team.scss
+++ b/frontend/styles/team/team.scss
@@ -43,6 +43,8 @@
 			padding-right: 25px;
 			margin-top: 5px;
 			margin-bottom: 5px;
+			position: relative;
+			z-index: 0;
 			
 			.team-cl-img {
 				border: 1px solid black;
